Fix illegible warning

--- a/src/styles/prose.scss
+++ b/src/styles/prose.scss
@@ -2,6 +2,7 @@
 .content {
   // Base
   @apply prose max-w-none intersect:animate-fadeUp;
+  @apply text-txt-s dark:text-darkmode-txt-s;
   @apply prose-headings:mb-[.3em] prose-headings:mt-[.6em];
   @apply prose-h1:text-h1-sm md:prose-h1:text-h1;
   @apply prose-h2:text-h2-sm md:prose-h2:text-h2;
